src/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: {}
  type: LoadBalancer
