src/base/web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  backend:
    serviceName: service
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: service
          servicePort: 80
